Реализовать LinkedHashMap в классе InMemoryHistoryManager. Исправить ошибку автопроверки 3